[tool.poetry]
name = "my-best-repo"
version = "0.1.0"
description = ""
authors = ["Alvin Ryanputra <alvin.ryanputra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"



[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "."
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["disabled"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
